--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, default_data_collator, get_linear_schedule_with_warmup\n",
+    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, AutoProcessor, Llama4ForConditionalGeneration, default_data_collator, get_linear_schedule_with_warmup\n",
     "from peft import get_peft_config, get_peft_model, get_peft_model_state_dict, PrefixTuningConfig, TaskType\n",
     "from datasets import load_dataset\n",
     "from torch.utils.data import DataLoader\n",
@@ -32,6 +32,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sr No.</th>\n",
+       "      <th>Utterance</th>\n",
+       "      <th>Speaker</th>\n",
+       "      <th>Emotion</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Dialogue_ID</th>\n",
+       "      <th>Utterance_ID</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Episode</th>\n",
+       "      <th>StartTime</th>\n",
+       "      <th>EndTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>also I was the point person on my company’s tr...</td>\n",
+       "      <td>Chandler</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>21</td>\n",
+       "      <td>00:16:16,059</td>\n",
+       "      <td>00:16:21,731</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sr No.                                          Utterance   Speaker  \\\n",
+       "0       1  also I was the point person on my company’s tr...  Chandler   \n",
+       "\n",
+       "   Emotion Sentiment  Dialogue_ID  Utterance_ID  Season  Episode  \\\n",
+       "0  neutral   neutral            0             0       8       21   \n",
+       "\n",
+       "      StartTime       EndTime  \n",
+       "0  00:16:16,059  00:16:21,731  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -39,8 +117,20 @@
     "# Apply prefix tuning to solve the emotion recognition task\n",
     "# First, do the language modeling task with prefix tuning\n",
     "# The prefix are the emotions in the dataset, and the model will learn to predict the next word based on the prefix\n",
+    "# There's also an additional prefix for answering the emotion recognition task.\n",
     "\n",
-    "def get_data_loader(df, tokenizer, max_length=128, batch_size=16):\n",
+    "\n",
+    "model_id = \"meta-llama/Llama-4-Scout-17B-16E-Instruct\"\n",
+    "\n",
+    "processor = AutoProcessor.from_pretrained(model_id)\n",
+    "model = Llama4ForConditionalGeneration.from_pretrained(\n",
+    "    model_id,\n",
+    "    attn_implementation=\"flex_attention\",\n",
+    "    device_map=\"auto\",\n",
+    "    torch_dtype=torch.bfloat16,\n",
+    ")\n",
+    "\n",
+    "def get_data_loader(df, tokenizer, max_length=128, batch_size=4):\n",
     "    \"\"\"\n",
     "    Create a DataLoader for the dataset.\n",
     "    \"\"\"\n",
