add class to be altered

--- a/test.ipynb
+++ b/test.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "e:\\python\\CARC_stuff\\CARCVenv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, AutoProcessor, Llama4ForConditionalGeneration, default_data_collator, get_linear_schedule_with_warmup\n",
     "from peft import get_peft_config, get_peft_model, get_peft_model_state_dict, PrefixTuningConfig, TaskType\n",
@@ -31,81 +22,267 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sr No.</th>\n",
-       "      <th>Utterance</th>\n",
-       "      <th>Speaker</th>\n",
-       "      <th>Emotion</th>\n",
-       "      <th>Sentiment</th>\n",
-       "      <th>Dialogue_ID</th>\n",
-       "      <th>Utterance_ID</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>Episode</th>\n",
-       "      <th>StartTime</th>\n",
-       "      <th>EndTime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>also I was the point person on my company’s tr...</td>\n",
-       "      <td>Chandler</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>21</td>\n",
-       "      <td>00:16:16,059</td>\n",
-       "      <td>00:16:21,731</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Sr No.                                          Utterance   Speaker  \\\n",
-       "0       1  also I was the point person on my company’s tr...  Chandler   \n",
-       "\n",
-       "   Emotion Sentiment  Dialogue_ID  Utterance_ID  Season  Episode  \\\n",
-       "0  neutral   neutral            0             0       8       21   \n",
-       "\n",
-       "      StartTime       EndTime  \n",
-       "0  00:16:16,059  00:16:21,731  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "train_df[:1]"
+    "# create next token prediction dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# concatenate train and valid dataframes\n",
+    "ntp_df_raw = pd.concat([train_df, valid_df], ignore_index=True)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# T5-Large"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = train_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cuda\"\n",
+    "model_name_or_path = \"t5-large\"\n",
+    "tokenizer_name_or_path = \"t5-large\"\n",
+    "\n",
+    "text_column = \"sentence\"\n",
+    "label_column = \"text_label\"\n",
+    "max_length = 128\n",
+    "lr = 1e-2\n",
+    "num_epochs = 5\n",
+    "batch_size = 8\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained(model_name_or_path)\n",
+    "\n",
+    "def preprocess_function(examples):\n",
+    "    inputs = examples[text_column]\n",
+    "    targets = examples[label_column]\n",
+    "    model_inputs = tokenizer(inputs, max_length=max_length, padding=\"max_length\", truncation=True, return_tensors=\"pt\")\n",
+    "    labels = tokenizer(targets, max_length=2, padding=\"max_length\", truncation=True, return_tensors=\"pt\")\n",
+    "    labels = labels[\"input_ids\"]\n",
+    "    labels[labels == tokenizer.pad_token_id] = -100\n",
+    "    model_inputs[\"labels\"] = labels\n",
+    "    return model_inputs\n",
+    "    \n",
+    "processed_datasets = dataset.map(\n",
+    "    preprocess_function,\n",
+    "    batched=True,\n",
+    "    num_proc=1,\n",
+    "    remove_columns=dataset[\"train\"].column_names,\n",
+    "    load_from_cache_file=False,\n",
+    "    desc=\"Running tokenizer on dataset\",\n",
+    ")\n",
+    "\n",
+    "train_dataset = processed_datasets[\"train\"]\n",
+    "eval_dataset = processed_datasets[\"validation\"]\n",
+    "\n",
+    "train_dataloader = DataLoader(\n",
+    "    train_dataset, shuffle=True, collate_fn=default_data_collator, batch_size=batch_size, pin_memory=True\n",
+    ")\n",
+    "eval_dataloader = DataLoader(eval_dataset, collate_fn=default_data_collator, batch_size=batch_size, pin_memory=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from peft import PeftModelForSeq2SeqLM\n",
+    "from peft.tuners.prefix_tuning import PrefixEncoder\n",
+    "from transformers import PreTrainedModel\n",
+    "class ObjectivePeftModelForSeq2SeqLM(PeftModelForSeq2SeqLM):\n",
+    "    def __init__(self, model, peft_config):\n",
+    "        super().__init__(model, peft_config)\n",
+    "        self.model = model\n",
+    "        self.peft_config = peft_config\n",
+    "\n",
+    "    def _setup_prompt_encoder(self, adapter_name: str):\n",
+    "        config = self.peft_config[adapter_name]\n",
+    "        if not hasattr(self, \"prompt_encoder\"):\n",
+    "            self.prompt_encoder = torch.nn.ModuleDict({})\n",
+    "            self.prompt_tokens = {}\n",
+    "        transformer_backbone = None\n",
+    "        for name, module in self.base_model.named_children():\n",
+    "            for param in module.parameters():\n",
+    "                param.requires_grad = False\n",
+    "            if isinstance(module, PreTrainedModel):\n",
+    "                # Make sure to freeze Tranformers model\n",
+    "                if transformer_backbone is None:\n",
+    "                    transformer_backbone = module\n",
+    "                    self.transformer_backbone_name = name\n",
+    "        if transformer_backbone is None:\n",
+    "            transformer_backbone = self.base_model\n",
+    "\n",
+    "        if config.num_transformer_submodules is None:\n",
+    "            config.num_transformer_submodules = 2 if config.task_type == TaskType.SEQ_2_SEQ_LM else 1\n",
+    "\n",
+    "        # determine the word embeddings\n",
+    "        word_embeddings = None\n",
+    "        try:\n",
+    "            # First try to find the word embeddings based on the module name, this should work for models like Bert,\n",
+    "            # Roberta, Deberta, etc.\n",
+    "            word_embeddings = self.base_model.get_submodule(\"embeddings.word_embeddings\")\n",
+    "        except AttributeError:\n",
+    "            pass\n",
+    "\n",
+    "        if word_embeddings is None:\n",
+    "            # Word embeddings could not be determined. Next try to guess them by checking which parameter has the size\n",
+    "            # of the vocab.\n",
+    "            for named_param, value in list(transformer_backbone.named_parameters()):\n",
+    "                # for ZeRO-3, the tensor is sharded across accelerators and deepspeed modifies it to a tensor with shape\n",
+    "                # [0] the actual unsharded shape is stored in \"ds_shape\" attribute special handling is needed in case\n",
+    "                # the model is initialized in deepspeed.zero.Init() context or HfDeepSpeedConfig has been called before\n",
+    "                # For reference refer to issue: https://github.com/huggingface/peft/issues/996\n",
+    "                deepspeed_distributed_tensor_shape = getattr(value, \"ds_shape\", None)\n",
+    "\n",
+    "                if value.shape[0] == self.base_model.config.vocab_size or (\n",
+    "                    deepspeed_distributed_tensor_shape is not None\n",
+    "                    and deepspeed_distributed_tensor_shape[0] == self.base_model.config.vocab_size\n",
+    "                ):\n",
+    "                    word_embeddings = transformer_backbone.get_submodule(named_param.replace(\".weight\", \"\"))\n",
+    "                    break\n",
+    "\n",
+    "        self.word_embeddings = word_embeddings\n",
+    "\n",
+    "        prompt_encoder = PrefixEncoder(config)\n",
+    "\n",
+    "        prompt_encoder = prompt_encoder.to(self.device)\n",
+    "        self.prompt_encoder.update(torch.nn.ModuleDict({adapter_name: prompt_encoder}))\n",
+    "        self.prompt_tokens[adapter_name] = torch.arange(\n",
+    "            config.num_virtual_tokens * config.num_transformer_submodules\n",
+    "        ).long()\n",
+    "\n",
+    "    def forward(self, *args, **kwargs):\n",
+    "        return self.model(*args, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "peft_config = PrefixTuningConfig(task_type=TaskType.SEQ_2_SEQ_LM, inference_mode=False, num_virtual_tokens=20)\n",
+    "\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(model_name_or_path)\n",
+    "model = get_peft_model(model, peft_config)\n",
+    "model.print_trainable_parameters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=lr)\n",
+    "lr_scheduler = get_linear_schedule_with_warmup(\n",
+    "    optimizer=optimizer,\n",
+    "    num_warmup_steps=0,\n",
+    "    num_training_steps=(len(train_dataloader) * num_epochs),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = model.to(device)\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    for step, batch in enumerate(tqdm(train_dataloader)):\n",
+    "        batch = {k: v.to(device) for k, v in batch.items()}\n",
+    "        outputs = model(**batch)\n",
+    "        loss = outputs.loss\n",
+    "        total_loss += loss.detach().float()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        lr_scheduler.step()\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "    model.eval()\n",
+    "    eval_loss = 0\n",
+    "    eval_preds = []\n",
+    "    for step, batch in enumerate(tqdm(eval_dataloader)):\n",
+    "        batch = {k: v.to(device) for k, v in batch.items()}\n",
+    "        with torch.no_grad():\n",
+    "            outputs = model(**batch)\n",
+    "        loss = outputs.loss\n",
+    "        eval_loss += loss.detach().float()\n",
+    "        eval_preds.extend(\n",
+    "            tokenizer.batch_decode(torch.argmax(outputs.logits, -1).detach().cpu().numpy(), skip_special_tokens=True)\n",
+    "        )\n",
+    "\n",
+    "    eval_epoch_loss = eval_loss / len(eval_dataloader)\n",
+    "    eval_ppl = torch.exp(eval_epoch_loss)\n",
+    "    train_epoch_loss = total_loss / len(train_dataloader)\n",
+    "    train_ppl = torch.exp(train_epoch_loss)\n",
+    "    print(f\"{epoch=}: {train_ppl=} {train_epoch_loss=} {eval_ppl=} {eval_epoch_loss=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct = 0\n",
+    "total = 0\n",
+    "for pred, true in zip(eval_preds, dataset[\"validation\"][\"text_label\"]):\n",
+    "    if pred.strip() == true.strip():\n",
+    "        correct += 1\n",
+    "    total += 1\n",
+    "accuracy = correct / total * 100\n",
+    "print(f\"{accuracy=} % on the evaluation dataset\")\n",
+    "print(f\"{eval_preds[:10]=}\")\n",
+    "print(f\"{dataset['validation']['text_label'][:10]=}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Llama-4"
    ]
   },
   {
@@ -129,31 +306,46 @@
     "    device_map=\"auto\",\n",
     "    torch_dtype=torch.bfloat16,\n",
     ")\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            {\"type\": \"text\", \"text\": train_df[\"Emotion\"][0]},\n",
+    "            {\"type\": \"text\", \"text\": train_df[\"Utterance\"][0]},\n",
+    "        ]\n",
+    "    },\n",
+    "]\n",
+    "inputs = processor.apply_chat_template(\n",
+    "    messages,\n",
+    "    add_generation_prompt=True,\n",
+    "    tokenize=True,\n",
+    "    return_dict=True,\n",
+    "    return_tensors=\"pt\",\n",
+    ")\n",
+    "# def get_data_loader(df, processor, max_length=128, batch_size=4):\n",
+    "#     \"\"\"\n",
+    "#     Create a DataLoader for the dataset.\n",
+    "#     \"\"\"\n",
+    "#     def encode(examples):\n",
+    "#         return processor(\n",
+    "#             examples[\"Emotion\"],\n",
+    "#             examples[\"Utterance\"],\n",
+    "#             truncation=True,\n",
+    "#             max_length=max_length,\n",
+    "#             padding=\"max_length\",\n",
+    "#         )\n",
     "\n",
-    "def get_data_loader(df, tokenizer, max_length=128, batch_size=4):\n",
-    "    \"\"\"\n",
-    "    Create a DataLoader for the dataset.\n",
-    "    \"\"\"\n",
-    "    def encode(examples):\n",
-    "        return tokenizer(\n",
-    "            examples['Utterance'],\n",
-    "            truncation=True,\n",
-    "            padding='max_length',\n",
-    "            max_length=max_length,\n",
-    "            return_tensors='pt'\n",
-    "        )\n",
-    "\n",
-    "    # Encode the dataset\n",
-    "    encoded_dataset = df.apply(encode, axis=1).tolist()\n",
+    "#     # Encode the dataset\n",
+    "#     encoded_dataset = df.apply(encode, axis=1).tolist()\n",
     "    \n",
-    "    # Create DataLoader\n",
-    "    data_loader = DataLoader(\n",
-    "        encoded_dataset,\n",
-    "        batch_size=batch_size,\n",
-    "        collate_fn=default_data_collator\n",
-    "    )\n",
+    "#     # Create DataLoader\n",
+    "#     data_loader = DataLoader(\n",
+    "#         encoded_dataset,\n",
+    "#         batch_size=batch_size,\n",
+    "#         collate_fn=default_data_collator\n",
+    "#     )\n",
     "    \n",
-    "    return data_loader\n",
+    "#     return data_loader\n",
     "\n"
    ]
   }
@@ -178,5 +370,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
