altered _setup_prompt_encoder function

--- a/test.ipynb
+++ b/test.ipynb
@@ -126,6 +126,29 @@
     "from peft import PeftModelForSeq2SeqLM\n",
     "from peft.tuners.prefix_tuning import PrefixEncoder\n",
     "from transformers import PreTrainedModel\n",
+    "import torch\n",
+    "\n",
+    "\n",
+    "class ObjectivePrefixEncoder(PrefixEncoder):\n",
+    "    def __init__(self, config):\n",
+    "        super().__init__()\n",
+    "        self.prefix_projection = config.prefix_projection\n",
+    "        token_dim = config.token_dim\n",
+    "        num_layers = config.num_layers\n",
+    "        encoder_hidden_size = config.encoder_hidden_size\n",
+    "        num_embeddings = config.num_virtual_tokens * config.num_objects\n",
+    "        if self.prefix_projection and not config.inference_mode:\n",
+    "            # Use a two-layer MLP to encode the prefix\n",
+    "            self.embedding = torch.nn.Embedding(num_embeddings, token_dim)\n",
+    "            self.transform = torch.nn.Sequential(\n",
+    "                torch.nn.Linear(token_dim, encoder_hidden_size),\n",
+    "                torch.nn.Tanh(),\n",
+    "                torch.nn.Linear(encoder_hidden_size, num_layers * 2 * token_dim),\n",
+    "            )\n",
+    "        else:\n",
+    "            self.embedding = torch.nn.Embedding(num_embeddings, num_layers * 2 * token_dim)\n",
+    "\n",
+    "\n",
     "class ObjectivePeftModelForSeq2SeqLM(PeftModelForSeq2SeqLM):\n",
     "    def __init__(self, model, peft_config):\n",
     "        super().__init__(model, peft_config)\n",
@@ -180,13 +203,15 @@
     "\n",
     "        self.word_embeddings = word_embeddings\n",
     "\n",
-    "        prompt_encoder = PrefixEncoder(config)\n",
+    "        prompt_encoder = ObjectivePrefixEncoder(config)\n",
     "\n",
     "        prompt_encoder = prompt_encoder.to(self.device)\n",
     "        self.prompt_encoder.update(torch.nn.ModuleDict({adapter_name: prompt_encoder}))\n",
-    "        self.prompt_tokens[adapter_name] = torch.arange(\n",
-    "            config.num_virtual_tokens * config.num_transformer_submodules\n",
-    "        ).long()\n",
+    "        \n",
+    "        for name in config.object_names:\n",
+    "            self.prompt_tokens[adapter_name][name] = torch.arange(\n",
+    "                config.num_virtual_tokens * config.num_transformer_submodules\n",
+    "            ).long()\n",
     "\n",
     "    def forward(self, *args, **kwargs):\n",
     "        return self.model(*args, **kwargs)"
