--- a/test.ipynb
+++ b/test.ipynb
@@ -226,10 +226,11 @@
     "\n",
     "    def get_\n",
     "    \n",
-    "    def get_prompt(self, object_id: Optional[torch.Tensor] = None) -> torch.Tensor:\n",
+    "    def get_prompt(self, batch_size: int, object_ids: Optional[torch.Tensor] = None) -> torch.Tensor:\n",
     "        \"\"\"\n",
     "        Returns the virtual prompts to use for Peft. Only applicable when using a prompt learning method.\n",
     "        \"\"\"\n",
+    "        batch_size = _get_batch_size(object_ids)\n",
     "        peft_config = self.active_peft_config\n",
     "        prompt_encoder = self.prompt_encoder[self.active_adapter]\n",
     "        # arrange the prompt tokens according to the object id\n",
@@ -295,6 +296,7 @@
     "        output_hidden_states=None,\n",
     "        return_dict=None,\n",
     "        task_ids=None,\n",
+    "\n",
     "        **kwargs,\n",
     "    ):\n",
     "        peft_config = self.active_peft_config\n",
