done tensor process in get_prompt function; yet inference_mode is not done

--- a/test.ipynb
+++ b/test.ipynb
@@ -139,6 +139,9 @@
     "from transformers import PreTrainedModel, DynamicCache, EncoderDecoderCache, map_cache_to_layer_device_map\n",
     "from typing import Optional\n",
     "import torch\n",
+    "import numpy as np\n",
+    "import warnings\n",
+    "\n",
     "\n",
     "\n",
     "class ObjectivePrefixEncoder(PrefixEncoder):\n",
@@ -149,16 +152,21 @@
     "        num_layers = config.num_layers\n",
     "        encoder_hidden_size = config.encoder_hidden_size\n",
     "        num_embeddings = config.num_virtual_tokens * config.num_objects\n",
+    "        if config.padding_idx is not None:\n",
+    "            self.padding_idx = config.padding_idx\n",
+    "        else:\n",
+    "            self.padding_idx = num_embeddings\n",
+    "            num_embeddings += 1\n",
     "        if self.prefix_projection and not config.inference_mode:\n",
     "            # Use a two-layer MLP to encode the prefix\n",
-    "            self.embedding = torch.nn.Embedding(num_embeddings, token_dim)\n",
+    "            self.embedding = torch.nn.Embedding(num_embeddings, token_dim, padding_idx=self.padding_idx)\n",
     "            self.transform = torch.nn.Sequential(\n",
     "                torch.nn.Linear(token_dim, encoder_hidden_size),\n",
     "                torch.nn.Tanh(),\n",
     "                torch.nn.Linear(encoder_hidden_size, num_layers * 2 * token_dim),\n",
     "            )\n",
     "        else:\n",
-    "            self.embedding = torch.nn.Embedding(num_embeddings, num_layers * 2 * token_dim)\n",
+    "            self.embedding = torch.nn.Embedding(num_embeddings, num_layers * 2 * token_dim, padding_idx=self.padding_idx)\n",
     "\n",
     "\n",
     "class ObjectivePeftModelForSeq2SeqLM(PeftModelForSeq2SeqLM):\n",
@@ -229,25 +237,30 @@
     "        \"\"\"\n",
     "        Returns the virtual prompts to use for Peft. Only applicable when using a prompt learning method.\n",
     "        \"\"\"\n",
-    "        batch_size = _get_batch_size(object_ids)\n",
     "        peft_config = self.active_peft_config\n",
     "        prompt_encoder = self.prompt_encoder[self.active_adapter]\n",
     "        # arrange the prompt tokens according to the object id\n",
-    "        if object_id is not None:\n",
-    "            object_id = object_id.view(batch_size, 1).expand(-1, peft_config.num_virtual_tokens)\n",
-    "            prompt_tokens = prompt_tokens + object_id * peft_config.num_virtual_tokens\n",
+    "        if object_ids is not None:\n",
+    "            object_ids = object_ids.view(batch_size, -1)\n",
+    "            prompt_tokens = (object_ids * peft_config.num_virtual_tokens)[:, :, None] + np.arange(peft_config.num_virtual_tokens)\n",
+    "            # set token id to padding id if it is out of range\n",
+    "            prompt_tokens[prompt_tokens > prompt_encoder.padding_idx] = prompt_encoder.padding_idx\n",
     "        else:\n",
-    "            prompt_tokens = (\n",
-    "                self.prompt_tokens[self.active_adapter][-peft_config.num_virtual_tokens:]\n",
-    "                .unsqueeze(0)\n",
-    "                .expand(batch_size, -1)\n",
-    "                .to(prompt_encoder.embedding.weight.device)\n",
-    "            )\n",
+    "            # prompt_tokens = (\n",
+    "            #     self.prompt_tokens[self.active_adapter][-peft_config.num_virtual_tokens:]\n",
+    "            #     .unsqueeze(0)\n",
+    "            #     .expand(batch_size, -1)\n",
+    "            #     .to(prompt_encoder.embedding.weight.device)\n",
+    "            # )\n",
+    "            raise ValueError(\"object_ids is None, please provide object_ids for ObjectivePeftModelForSeq2SeqLM\")\n",
     "        \n",
     "\n",
-    "        prompt_tokens = prompt_tokens[:, : peft_config.num_virtual_tokens]\n",
+    "        # prompt_tokens = prompt_tokens[:, : peft_config.num_virtual_tokens]\n",
     "        if peft_config.inference_mode:\n",
-    "            past_key_values = prompt_encoder.embedding.weight.repeat(batch_size, 1, 1)\n",
+    "            # past_key_values = prompt_encoder.embedding.weight.repeat(batch_size, 1, 1)\n",
+    "            # TODO: add support for inference mode\n",
+    "            pass\n",
+    "\n",
     "        else:\n",
     "            past_key_values = prompt_encoder(prompt_tokens)\n",
     "        if self.base_model_torch_dtype is not None:\n",
@@ -325,9 +338,22 @@
     "            }\n",
     "        )\n",
     "\n",
-    "        kwargs[\"past_key_values\"] = self.get_prompt(batch_size)\n",
+    "        if inputs_embeds is None:\n",
+    "            inputs_embeds = self.word_embeddings(input_ids)\n",
+    "\n",
+    "        if attention_mask is not None:\n",
+    "            # concat prompt attention mask\n",
+    "            prefix_attention_mask = torch.ones(batch_size, peft_config.num_virtual_tokens).to(\n",
+    "                attention_mask.device\n",
+    "            )\n",
+    "            kwargs[\"attention_mask\"] = torch.cat((prefix_attention_mask, attention_mask), dim=1)\n",
+    "\n",
+    "        prompts = self.get_prompt(batch_size=batch_size)\n",
+    "        prompts = prompts.to(inputs_embeds.dtype)\n",
+    "        inputs_embeds = torch.cat((prompts[:, : peft_config.num_virtual_tokens], inputs_embeds), dim=1)\n",
+    "\n",
     "        return self.base_model(\n",
-    "            input_ids=input_ids,\n",
+    "            inputs_embeds=inputs_embeds,\n",
     "            decoder_input_ids=decoder_input_ids,\n",
     "            decoder_inputs_embeds=decoder_inputs_embeds,\n",
     "            **kwargs,\n",
